# instaSchool

./: .env_example  .gitignore  .mcp.json  AUDIO_TTS_IMPLEMENTATION.md  BATCH_SERVICE_CHANGES_SUMMARY.md  BATCH_THREADING_FIX_QUICKREF.md  BATCH_UI_CHANGES_REQUIRED.md  BATCH_UI_IMPLEMENTATION_SUMMARY.md  CACHING_GUIDE.md  CHANGES.md  CIRCULAR_DEPENDENCY_FIX.md  CLAUDE.md  CLAUDE_CURRENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  InstaSchool Remediation & Enhancement Plan.md  MOBILE_UI.md  MODEL_DETECTION_INTEGRATION.md  MULTIPAGE_ANALYSIS.md  QUICK_TEST_GUIDE.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  STREAMING_CHANGES_SUMMARY.md  STUDENT_MODE_IMPLEMENTATION_SUMMARY.md  TIME_AWARE_VALIDATION.md  TODO.md  TUTOR_IMPLEMENTATION.md  badges.json  batch_ui_implementation.py  config.yaml  main.py  main_backup.py  openai_models.md  pyproject.toml  requirements.txt  test_streaming.py  version.py  what_llms.py  what_llms_i_want.md
.serena/: project.yml
.streamlit/: config.toml  secrets.toml.example
batch_status/: job_62761497.json  job_f5f081d4.json
docs/: AUDIO_CODE_EXAMPLES.md  AUDIO_QUICKSTART.md  BATCH_SERVICE_THREADING_FIX.md  PHASE_1_2_SUMMARY.md  PHASE_3_COMPLETE.md  PROJECT_STRUCTURE.md  STREAMING.md  STREAMING_QUICK_START.md  STUDENT_MODE_DESIGN_SPEC.md  STUDENT_MODE_IMPLEMENTATION_GUIDE.md  STUDENT_MODE_INDEX.md  STUDENT_MODE_QUICKSTART.md  STUDENT_MODE_SUMMARY.md  STUDENT_MODE_VISUAL_REFERENCE.md  UI_PATTERNS.md  architecture_imports.md  code_review_report.md  critical_issues_report.md  gui_enhancement_summary.md
pages/: 1_Student.py  2_Create.py  3_Parent.py  4_Library.py
scripts/: check.sh  validate_kimi_models.py  verify_providers.py
services/: analytics_service.py  batch_service.py  cache_service.py  certificate_service.py  challenge_service.py  curriculum_service.py  customization_service.py  database_service.py  export_service.py  family_service.py  provider_service.py  (+9 more)
(+54 files in other folders)
