[project]
name = "instaschool"
version = "1.0.0"
description = "AI-powered curriculum generator for K-12 education"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "archive",
    "*.pyc",
    ".eggs",
    "build",
    "dist",
    "*_backup.py",  # Exclude backup files
]

[tool.ruff.lint]
# Start with a minimal set of rules - expand as needed
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter if enabled)
    "E402",  # module level import not at top of file (common in Streamlit)
    "E722",  # bare except (used for fallback imports, low risk)
    "F401",  # unused imports (may be intentional re-exports)
    "F541",  # f-string without placeholders (harmless)
    "F841",  # unused variable (may be intentional for structure)
    "I001",  # import sorting (defer until codebase cleanup)
    "UP006", # use builtin types instead of typing.Dict etc (defer cleanup)
    "UP015", # unnecessary mode argument (low priority)
    "UP024", # replace IOError with OSError (low priority)
    "UP035", # deprecated typing imports (defer cleanup)
    "UP045", # use X | None instead of Optional[X] (defer cleanup)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["F811"]  # Allow redefinition in tests (fixtures)

[tool.ruff.lint.isort]
known-first-party = ["src", "services", "pages"]
